[package]
name = "lcrs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Lambda Calculus Interpreter written in Rust."
repository = "https://github.com/alpaylan/lcrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ulc"
path = "src/ulc.rs"

[dependencies]
